# Vertex

./: .gitignore  Cargo.toml  INSTALLATION.md  LICENSE.md  README.md  ROADMAP.md  SECURITY.md
lang/: syntax.vtx
scripts/: build_skript.sh  custom_run.sh  regression_tests.py
src/: lib.rs
src/backend/: mod.rs
src/backend/ast/: mod.rs  nodes.rs
src/backend/ast/functions/: args_node.rs  function_nodes.rs
src/backend/ast/parser/: mod.rs  parse_stmt.rs  parse_unary.rs  parse_val.rs  parser_navigation.rs  parser_trait.rs
src/backend/ast/statements/: if_statement.rs  mod.rs  structs.rs  while_statement.rs
src/backend/buildin_macros/: get_macro.rs  mod.rs
src/backend/compiler/: byte_code.rs  mod.rs
src/backend/compiler/comptime_variable_checker/: comptime_context.rs  comptime_value_for_check.rs
src/backend/errors/: lexer_errors.rs  mod.rs
src/backend/errors/compiler/: compiler_errors.rs  error_explain.rs
src/backend/errors/diagnostics/: lexer_error_print.rs
src/backend/errors/formatter/: colorformat.rs
src/backend/lexer/: tokenizer.rs
src/backend/linker/: link.rs  obj_file.rs  sort_objs.rs
src/backend/saving_bytes/: binary_compilation.rs  compile_tools.rs  mod.rs
src/runtime_lib/: Cargo.toml
src/tools/: custom_truncate.rs  mod.rs
testingCode/: chess.vtx  fact.vtx  functions.vtx
