[package]
name = "vertex"
version = "0.1.51-alpha"
edition = "2024"
license = "Apache-2.0"

[dependencies]
thiserror = "2.0.18"
once_cell = "1.17"
toml = "1.0.6"
serde = { version = "1.0", features = ["derive"] }
walkdir = "2"
strum = "0.28.0"
strum_macros = "0.28"
indicatif = "0.18.4"

[profile.release]
debug = true
[lib]
crate-type = ["staticlib", "rlib"]

[[bin]]
name = "vertexC"
path = "src/bin/vertexC.rs"

[[bin]]
name = "apex"
path = "src/bin/apex.rs"
